--- a/src/components/Typography/Typography.css
+++ b/src/components/Typography/Typography.css
@@ -374,3 +374,36 @@
     var(--md-sys-color-on-surface)
   );
 }
+
+/* Underline styles */
+.MuiTypography-underline-none {
+  text-decoration: none;
+}
+
+.MuiTypography-underline-hover {
+  text-decoration: none;
+}
+
+.MuiTypography-underline-hover {
+  text-decoration: underline;
+  text-decoration-color: color-mix(in srgb, currentColor 20%, transparent);
+
+  &:hover {
+    text-decoration-color: currentColor;
+  }
+}
+
+.MuiTypography-underline-always {
+  text-decoration: underline;
+}
+
+.MuiTypography-root:where([class*="MuiTypography-underline"]) a {
+  text-decoration: inherit;
+}
+
+/* Nested typography, need to stay at the bottom of the styles */
+:where(.MuiTypography-root) .MuiTypography-root {
+  display: inline-block;
+  font: inherit;
+  letter-spacing: inherit;
+}
