make the span and a inline-block

--- a/src/components/Typography2/Typography2.css
+++ b/src/components/Typography2/Typography2.css
@@ -1,6 +1,9 @@
 .MuiTypography2-root {
   margin: 0;
   padding: 0;
+  &:where(a, span) {
+    display: inline-block;
+  }
 }
 
 .MuiTypography2-inline {
